[package]
name = "concord"
version = "1.0.0"
edition = "2018"

[dependencies]
librustlet = { git = "http://github.com/37miners/rustlet", branch = "master" }
#librustlet = { path = "../rustlet/rustlet" }
concordlib = { path = "./concord" }
concorderror = { path = "./error" }
concorddata = { path = "./data" }
