[package]
name = "concordlib"
version = "1.0.0"
authors = ["37 Miners Developers"]
description = "concord libraries"
license = "Apache-2.0"
repository = "https://github.com/37miners/concord"
keywords = [ "37miners", "concord" ]
exclude = ["**/*.concord"]
edition = "2018"

[dependencies]

librustlet = { git = "http://github.com/37miners/rustlet", branch = "master" }
#librustlet = { path = "../../rustlet/rustlet" }
nioruntime_err = { git = "http://github.com/37miners/nioruntime", branch = "master" }
#nioruntime_err = { path = "../../nioruntime/error" }

concorddata = { path = "../data" }
concorderror = { path = "../error" }
webbrowser = "0.5.5"
serde_json = "1.0.59"
serde = "1"
serde_derive = "1"
fsutils = "0.1"
dirs = "3.0.2"
rand = "0.8.4"
querystring = "1.1.0"
mime_multipart = "0.6.0"
hyper = "0.10.16"
