[package]
name = "concordlib"
version = "1.0.0"
authors = ["37 Miners Developers"]
description = "concord libraries"
license = "Apache-2.0"
repository = "https://github.com/37miners/concord"
keywords = [ "37miners", "concord" ]
exclude = ["**/*.concord"]
edition = "2018"

[dependencies]

concorddata = { path = "../data" }
concorderror = { path = "../error" }
concordutil = { path = "../util" }
concordconfig = { path = "../config" }

webbrowser = "0.5.5"
serde_json = "1.0.59"
serde = "1"
serde_derive = "1"
fsutils = "0.1"
rand = "0.8.4"
querystring = "1.1.0"
mime_multipart = "0.6.0"
hyper = "0.10.16"
urlencoding = "2.1.0"
base64 = "0.13.0"
url = "2.2.2"
