[package]
name = "data"
version = "1.0.0"
authors = ["37 Miners Developers"]
description = "data libraries"
license = "Apache-2.0"
repository = "https://github.com/37miners/concord"
keywords = [ "37miners", "concord" ]
exclude = ["**/*.concord"]
edition = "2018"

[dependencies]

grin_store = { git = "https://github.com/bitcoinmw/bitcoinmw", branch = "master"}
grin_core = { git = "https://github.com/bitcoinmw/bitcoinmw", branch = "master"}
grin_util = { git = "https://github.com/bitcoinmw/bitcoinmw", branch = "master"}

byteorder = "1"
croaring = { version = "0.4.5", package = "croaring-mw", features = ["compat"] }
libc = "0.2"
failure = "0.1"
failure_derive = "0.1"
lmdb-zero = "0.4.4"
memmap = "0.7"
tempfile = "3.1"
serde = "1"
serde_derive = "1"
log = "0.4"

[dev-dependencies]
chrono = "0.4.11"
rand = "0.6"
filetime = "0.2"
env_logger = "0.7"
