[package]
name = "concorddata"
version = "1.0.0"
authors = ["37 Miners Developers"]
description = "data libraries"
license = "Apache-2.0"
repository = "https://github.com/37miners/concord"
keywords = [ "37miners", "concord" ]
exclude = ["**/*.concord"]
edition = "2018"

[dependencies]

concorderror = { path = "../error" }
nioruntime_log = { git = "http://github.com/37miners/nioruntime", branch = "master" }
#nioruntime_log = { path = "../../nioruntime/log" }


zeroize = { version = "1.1", features =["zeroize_derive"] }
grin_secp256k1zkp = { git = "https://github.com/bitcoinmw/rust-secp256k1-zkp", features = ["bullet-proof-sizing"] }

blake2 = { package = "blake2-rfc", version = "0.2"}
bytes = "0.5"
byteorder = "1"
urlencoding = "2.1.0"
croaring = { version = "0.4.5", package = "croaring-mw", features = ["compat"] }
libc = "0.2"
failure = "0.1"
base64 = "0.13.0"
dirs = "3.0.2"
fsutils = "0.1.0"
rand = "0.8.4"
failure_derive = "0.1"
lmdb-zero = "0.4.4"
memmap = "0.7"
tempfile = "3.1"
parking_lot = "0.10"
serde = "1"
serde_derive = "1"
bs58 = "0.4.0"

[dev-dependencies]
chrono = "0.4.11"
rand = "0.6"
filetime = "0.2"
env_logger = "0.7"
