[package]
name = "concorderror"
version = "1.0.0"
authors = ["37 Miners Developers"]
description = "error for concord"
license = "Apache-2.0"
repository = "https://github.com/37miners/concord"
keywords = [ "crypto", "nioruntime", "mimblewimble" ]
exclude = ["**/*.nio"]
edition = "2018"

[dependencies]

librustlet = { git = "http://github.com/37miners/rustlet", branch = "master" }

failure = "0.1"
failure_derive = "0.1"
futures = "0.3.0"
lazy_static = "1.4.0"
nix = "0.22.0"
base64 = "0.13.0"
chrono = "0.4"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
lmdb-zero = "0.4.4"
byteorder = "1"
bytes = "0.5"
rustls = "0.20.0-beta1"
bs58 = "0.4.0"
serde_json = "1.0.59"
