[package]
name = "concordutil"
version = "1.0.0"
authors = ["37 Miners Developers"]
description = "utils for concord"
license = "Apache-2.0"
repository = "https://github.com/37miners/concord"
keywords = [ "crypto", "nioruntime", "mimblewimble" ]
exclude = ["**/*.nio"]
edition = "2018"

[dependencies]

nioruntime_log = { git = "http://github.com/37miners/nioruntime", branch = "master" }
#nioruntime_log = { path = "../../nioruntime/log" }

concorderror = { path = "../error" }
tor-stream = "0.3.0"
socks = "0.3.2"
url = "2.2.2"
